--- a/shop.html
+++ b/shop.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>GameWorld  - Shop Page</title>
+    <title>Lugx Gaming - Shop Page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,9 @@
     <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
 <!--
 
+TemplateMo 589 lugx gaming
 
+https://templatemo.com/tm-589-lugx-gaming
 
 -->
   </head>
@@ -107,7 +109,7 @@
             </div>
             <div class="down-content">
               <span class="category">Action</span>
-              <h4>Call of Duty Black Ops</h4>
+              <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -120,7 +122,7 @@
             </div>
             <div class="down-content">
               <span class="category">Action</span>
-              <h4>For Honor</h4>
+              <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -133,7 +135,7 @@
             </div>
             <div class="down-content">
               <span class="category">Action</span>
-              <h4>PUBG</h4>
+              <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -146,7 +148,7 @@
             </div>
             <div class="down-content">
               <span class="category">Action</span>
-              <h4>Far Cry 3</h4>
+              <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -159,7 +161,7 @@
             </div>
             <div class="down-content">
               <span class="category">Action</span>
-              <h4>Sims 4</h4>
+              <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -172,7 +174,7 @@
             </div>
             <div class="down-content">
               <span class="category">Action</span>
-              <h4>Stalker 2</h4>
+              <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -181,11 +183,11 @@
           <div class="item">
             <div class="thumb">
               <a href="product-details.html"><img src="assets/images/trending-04.jpg" alt=""></a>
-              <span class="price"><em>$40</em>$27</span>
+              <span class="price"><em>$32</em>$22</span>
             </div>
             <div class="down-content">
               <span class="category">Action</span>
-              <h4>Metro Exodus</h4>
+              <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -198,7 +200,7 @@
             </div>
             <div class="down-content">
               <span class="category">Action</span>
-              <h4>Far Cry 6</h4>
+              <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -211,7 +213,7 @@
             </div>
             <div class="down-content">
               <span class="category">Action</span>
-              <h4>Call of Duty 1</h4>
+              <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -224,7 +226,7 @@
             </div>
             <div class="down-content">
               <span class="category">Action</span>
-              <h4>Counter Strike 2</h4>
+              <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -237,7 +239,7 @@
             </div>
             <div class="down-content">
               <span class="category">Action</span>
-              <h4>Civilization IV</h4>
+              <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -250,7 +252,7 @@
             </div>
             <div class="down-content">
               <span class="category">Action</span>
-              <h4>Assasin Creed Origins</h4>
+              <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -273,7 +275,7 @@
   <footer>
     <div class="container">
       <div class="col-lg-12">
-        <p>Copyright © 2048 GAMEWORLD Gaming Company. All rights reserved. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
+        <p>Copyright © 2048 LUGX Gaming Company. All rights reserved. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
       </div>
     </div>
   </footer>
