--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>GameWorld - Contact Page</title>
+    <title>Lugx Gaming Template - Contact Page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,9 @@
     <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
 <!--
 
+TemplateMo 589 lugx gaming
 
+https://templatemo.com/tm-589-lugx-gaming
 
 -->
   </head>
@@ -91,11 +93,11 @@
               <h6>Contact Us</h6>
               <h2>Say Hello!</h2>
             </div>
-            <p></p>
+            <p>LUGX Gaming Template is based on the latest Bootstrap 5 CSS framework. This template is provided by TemplateMo and it is suitable for your gaming shop ecommerce websites. Feel free to use this for any purpose. Thank you.</p>
             <ul>
               <li><span>Address</span> Sunny Isles Beach, FL 33160, United States</li>
               <li><span>Phone</span> +123 456 7890</li>
-              <li><span>Email</span> gameworld234@contact.com</li>
+              <li><span>Email</span> lugx@contact.com</li>
             </ul>
           </div>
         </div>
@@ -153,7 +155,7 @@
   <footer>
     <div class="container">
       <div class="col-lg-12">
-        <p>Copyright © 2048 GAMEWORLD Gaming Company. All rights reserved. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
+        <p>Copyright © 2048 LUGX Gaming Company. All rights reserved. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
       </div>
     </div>
   </footer>
