--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>GameWorld Gaming Shop </title>
+    <title>Lugx Gaming Shop HTML5 Template</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -21,12 +21,14 @@
     <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
 <!--
 
+TemplateMo 589 lugx gaming
+
+https://templatemo.com/tm-589-lugx-gaming
 
 -->
   </head>
 
 <body>
-
 
   <!-- ***** Preloader Start ***** -->
   <div id="js-preloader" class="js-preloader">
@@ -45,7 +47,7 @@
   <header class="header-area header-sticky">
     <div class="container">
         <div class="row">
-            <div class="col-14">
+            <div class="col-12">
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
@@ -74,11 +76,11 @@
   <div class="main-banner">
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 align-self-center">
+        <div class="col-lg-6 align-self-center">
           <div class="caption header-text">
-            <h6>Welcome to GameWorld</h6>
-            <h2>BEST GAMING SITE IN THE WORLD!</h2>
-            <p>GameWorld - this is the best online store for buying licensed games. With us, you will get access to a wide range of games for all platforms: from action and adventure games to strategy and indie hits..</p>
+            <h6>Welcome to lugx</h6>
+            <h2>BEST GAMING SITE EVER!</h2>
+            <p>LUGX Gaming is free Bootstrap 5 HTML CSS website template for your gaming websites. You can download and use this layout for commercial purposes. Please tell your friends about TemplateMo.</p>
             <div class="search-input">
               <form id="search" action="#">
                 <input type="text" placeholder="Type Something" id='searchText' name="searchKeyword" onkeypress="handle" />
@@ -87,11 +89,11 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 offset-lg-1">
+        <div class="col-lg-4 offset-lg-2">
           <div class="right-image">
             <img src="assets/images/banner-image.jpg" alt="">
             <span class="price">$22</span>
-            <span class="offer">-50%</span>
+            <span class="offer">-40%</span>
           </div>
         </div>
       </div>
@@ -101,23 +103,23 @@
   <div class="features">
     <div class="container">
       <div class="row">
-        <div class="col-lg-2 col-md-4">
+        <div class="col-lg-3 col-md-6">
           <a href="#">
             <div class="item">
               <div class="image">
                 <img src="assets/images/featured-01.png" alt="" style="max-width: 44px;">
               </div>
-              <h4>Cloud storage</h4>
+              <h4>Free Storage</h4>
             </div>
           </a>
         </div>
-        <div class="col-lg-4 col-md-7">
+        <div class="col-lg-3 col-md-6">
           <a href="#">
             <div class="item">
               <div class="image">
                 <img src="assets/images/featured-02.png" alt="" style="max-width: 44px;">
               </div>
-              <h4>More for the user</h4>
+              <h4>User More</h4>
             </div>
           </a>
         </div>
@@ -137,7 +139,7 @@
               <div class="image">
                 <img src="assets/images/featured-04.png" alt="" style="max-width: 44px;">
               </div>
-              <h4>Reviews</h4>
+              <h4>Easy Layout</h4>
             </div>
           </a>
         </div>
@@ -163,11 +165,11 @@
           <div class="item">
             <div class="thumb">
               <a href="product-details.html"><img src="assets/images/trending-01.jpg" alt=""></a>
-              <span class="price"><em>$38</em>$19</span>
+              <span class="price"><em>$28</em>$20</span>
             </div>
             <div class="down-content">
               <span class="category">Action</span>
-              <h4>Warframe:veilbreaker</h4>
+              <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -176,11 +178,11 @@
           <div class="item">
             <div class="thumb">
               <a href="product-details.html"><img src="assets/images/trending-02.jpg" alt=""></a>
-              <span class="price">$50</span>
+              <span class="price">$44</span>
             </div>
             <div class="down-content">
               <span class="category">Action</span>
-              <h4>Days Gone</h4>
+              <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -189,11 +191,11 @@
           <div class="item">
             <div class="thumb">
               <a href="product-details.html"><img src="assets/images/trending-03.jpg" alt=""></a>
-              <span class="price"><em>$64</em>$32</span>
+              <span class="price"><em>$64</em>$44</span>
             </div>
             <div class="down-content">
               <span class="category">Action</span>
-              <h4>Control</h4>
+              <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -206,7 +208,7 @@
             </div>
             <div class="down-content">
               <span class="category">Action</span>
-              <h4>Resident Evil 2</h4>
+              <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -236,7 +238,7 @@
             </div>
             <div class="down-content">
                 <span class="category">Adventure</span>
-                <h4>Warframe:veilbreaker</h4>
+                <h4>Assasin Creed</h4>
                 <a href="product-details.html">Explore</a>
             </div>
           </div>
@@ -248,7 +250,7 @@
             </div>
             <div class="down-content">
                 <span class="category">Adventure</span>
-                <h4>PlayerUnknown's Battlegrounds</h4>
+                <h4>Assasin Creed</h4>
                 <a href="product-details.html">Explore</a>
             </div>
           </div>
@@ -260,7 +262,7 @@
             </div>
             <div class="down-content">
                 <span class="category">Adventure</span>
-                <h4>Apex Legends</h4>
+                <h4>Assasin Creed</h4>
                 <a href="product-details.html">Explore</a>
             </div>
           </div>
@@ -272,7 +274,7 @@
             </div>
             <div class="down-content">
                 <span class="category">Adventure</span>
-                <h4>Sims 4</h4>
+                <h4>Assasin Creed</h4>
                 <a href="product-details.html">Explore</a>
             </div>
           </div>
@@ -284,7 +286,7 @@
             </div>
             <div class="down-content">
                 <span class="category">Adventure</span>
-                <h4>Lostark</h4>
+                <h4>Assasin Creed</h4>
                 <a href="product-details.html">Explore</a>
             </div>
           </div>
@@ -296,7 +298,7 @@
             </div>
             <div class="down-content">
                 <span class="category">Adventure</span>
-                <h4>Destiny 2</h4>
+                <h4>Assasin Creed</h4>
                 <a href="product-details.html">Explore</a>
             </div>
           </div>
@@ -369,7 +371,7 @@
                   <h6>Our Shop</h6>
                   <h2>Go Pre-Order Buy & Get Best <em>Prices</em> For You!</h2>
                 </div>
-                <p>If you order in advance, you get a 25% discount, so use it!</p>
+                <p>Lorem ipsum dolor consectetur adipiscing, sed do eiusmod tempor incididunt.</p>
                 <div class="main-button">
                   <a href="shop.html">Shop Now</a>
                 </div>
@@ -383,7 +385,7 @@
               <div class="col-lg-12">
                 <div class="section-heading">
                   <h6>NEWSLETTER</h6>
-                  <h2>Get Up To $125 Off Just Buy <em>Subscribe</em> Newsletter!</h2>
+                  <h2>Get Up To $100 Off Just Buy <em>Subscribe</em> Newsletter!</h2>
                 </div>
                 <div class="search-input">
                   <form id="subscribe" action="#">
@@ -402,7 +404,7 @@
   <footer>
     <div class="container">
       <div class="col-lg-12">
-        <p>Copyright © 2048 GAMEWORLD Gaming Company. All rights reserved. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
+        <p>Copyright © 2048 LUGX Gaming Company. All rights reserved. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
       </div>
     </div>
   </footer>
